<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <com.apk.claw.android.widget.CommonToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etMemoryEditorContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|start"
        android:hint="@string/session_memory_editor_hint"
        android:padding="16dp"
        android:textColor="#101828"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <com.apk.claw.android.widget.KButton
            android:id="@+id/btnSaveMemoryEditor"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/common_save" />

        <com.apk.claw.android.widget.KButton
            android:id="@+id/btnWriteGlobalMemoryEditor"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:text="@string/session_memory_write_global"
            android:visibility="gone"
            app:btnBackground="@color/colorInfoContainer"
            app:btnBorderColor="@color/colorInfoPrimary"
            app:btnTextColor="@color/colorInfoOnContainer" />
    </LinearLayout>

</LinearLayout>
